--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,18 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
+    "compounds": [
+        {
+            "name": "API/Web Launch",
+            "configurations": [ "API Launch", "WEB Launch" ]
+        }
+    ],
     "configurations": [
         {
-            "name": "Launch API",
+            "name": "API Launch",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build-API",
             "program": "${workspaceFolder}/dotnet/ApplicationTracker.API/bin/Debug/net8.0/ApplicationTracker.API.dll",
             "args": [],
             "cwd": "${workspaceFolder}/dotnet/ApplicationTracker.API",
@@ -17,6 +23,27 @@
                 "action": "openExternally",
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
                 "uriFormat": "%s/swagger/index.html"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "name": "WEB Launch",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-WEB",
+            "program": "${workspaceFolder}/dotnet/ApplicationTracker.Web/bin/Debug/net8.0/ApplicationTracker.Web.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/dotnet/ApplicationTracker.Web",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+                "uriFormat": "%s"
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
