--- a/dotnet/ApplicationTracker.API/ApplicationTracker.API.csproj
+++ b/dotnet/ApplicationTracker.API/ApplicationTracker.API.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../ApplicationTracker.Model/ApplicationTracker.Model.csproj" />
+    <ProjectReference Include="../ApplicationTracker.Common/ApplicationTracker.Common.csproj" />
   </ItemGroup>
 
 </Project>
