--- a/dotnet/ApplicationTracker.Web/appsettings.json
+++ b/dotnet/ApplicationTracker.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-d6c959f5-bfd1-4615-93bf-d8d2fb9c6f5d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
