admin application controller refactored

--- a/dotnet/ApplicationTracker.Common/ApplicationTracker.Common.csproj
+++ b/dotnet/ApplicationTracker.Common/ApplicationTracker.Common.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+    <PackageReference Include="PluralizeService.Core" Version="1.2.21147.2" />
   </ItemGroup>
 
 
