--- a/dotnet/ApplicationTracker.Web/appsettings.Development.json
+++ b/dotnet/ApplicationTracker.Web/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    
+  },
+  "ApplicationTrackerApi": {
+    "BaseAddress": "https://localhost:7281/api/"
   }
 }
